--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 5vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,4 +35,16 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+form {
+  padding: 10px;
+}
+
+ul{
+  border-bottom: 0.3px solid rgb(10, 10, 10);
+}
+
+h3{
+  bottom: 20px;
 }
